# crow

./: .gitignore  CMakeLists.txt  main.cpp
templates/: add_project.html  contact.html  cv.html  edit_project.html  project_detail.html  projects.html
